--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
             </div>
             <ul class="navbar v-class-resp">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#my-work">My work</a></li>
-                <li><a href="#about-me">About me</a></li>
-                <li><a href="#contact-me">Contact me</a></li>
-                <li><a href="#order-now">Order now</a></li>
+                <li><a href="#admission">Admission</a></li>
+                <li><a href="#forstudents">For students</a></li>
+                <li><a href="#rule">Rules</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+              
 
                 <li class="dropbtn dropdown"><a href="#log-in">Log in</a>
                     <div class="dropdown-content dropdown">
