--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="slides">
 
                     </div>
-                    <p>Universal Knowledge Park</p>
+                    <p>Universal Knowledge Park , Madhurbond , Silchar</p>
                 </div>
             </div>
         </div>
