--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
         </div>
-        <div class="schoolname">Universal Knowledge Park</div>
+        <div class="schoolname">Universal Knowledge Park, Madhurbond Silchar</div>
         <div class="navcontainer background-nav h-nav-resp">
             <div class="logo logoinnav ">
                 <img src="logo.png" alt="Logo">
