--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section> -->
     <footer class="background-nav">
         <div class="left-footer">
-            Copyright &copy; 2021 - www.myportfolio001.com - All rights reserved!
+            Copyright &copy; 2021 - www.mywebsite.com - All rights reserved!
         </div>
         <div class="right-footer">
             Developer : Joyin
