--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </div>
     </section>
     <section id="welcome-screen">
-        <div class="advertise"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis et voluptas rerum, dolore distinctio nisi quos vero reiciendis fuga eum incidunt itaque, atque voluptate neque facilis deserunt sed maiores laboriosam a beatae totam ducimus
+        <div class="advertise"> <h1>Notices</h1><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis et voluptas rerum, dolore distinctio nisi quos vero reiciendis fuga eum incidunt itaque, atque voluptate neque facilis deserunt sed maiores laboriosam a beatae totam ducimus
             mollitia molestiae? Rem totam nostrum hic ab reiciendis cumque sint nobis, adipisci incidunt facilis saepe ipsa laborum explicabo debitis dolorum? Sequi, numquam ea officia blanditiis animi voluptas totam voluptates reiciendis dolor, deserunt
             ducimus, omnis repellendus recusandae unde autem beatae iste vel nostrum ab quasi mollitia saepe. Fugit aspernatur illo exercitationem minima libero. Amet obcaecati, voluptate eum non fuga doloremque ad eaque natus rerum, ratione ab!</div>
-        <div class="welcome">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nobis consequatur, labore provident non laudantium consequuntur molestias reiciendis doloribus at accusantium, aperiam veniam voluptatibus necessitatibus temporibus quos illum eius
+        <div class="welcome">Welcome to our school <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nobis consequatur, labore provident non laudantium consequuntur molestias reiciendis doloribus at accusantium, aperiam veniam voluptatibus necessitatibus temporibus quos illum eius
             ad! Qui, voluptates. Sapiente, natus sit quod fugit harum, doloremque suscipit error ullam repellendus ipsa soluta tempora modi totam, voluptatum similique exercitationem? Illum cupiditate quisquam aliquam, quo sint modi aperiam nobis optio
             minus repellat soluta saepe. Hic asperiores exercitationem id? Fugiat eligendi qui ipsa pariatur, cupiditate quae, suscipit fuga porro voluptate dignissimos rerum perspiciatis, ullam animi tempore! Unde, vel. Quod amet placeat similique vel
             iure eum fugiat deleniti laborum. Quos, at? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus nihil autem soluta sunt distinctio reiciendis dolore error sapiente saepe quia, reprehenderit tempore harum maxime quas ea facere
