--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <header>
         <div class="uppercontact">
             <div class="phonenumber">
-                <a href="6003351943"><img src="telephone.png" alt="">7825606520</a>
+                <a href="6003351943"><img src="telephone.png" alt="">78256XXXXX</a>
             </div>
             <div class="whatsapp">
-                <a href="https://wa.me/916003351943"><img src="whatsapp.png" alt=""> 32874097529</a>
+                <a href="https://wa.me/916003351943"><img src="whatsapp.png" alt=""> 32874XXXXX</a>
 
             </div>
 
@@ -39,7 +39,7 @@
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-              
+
 
                 <li class="dropbtn dropdown"><a href="#log-in">Log in</a>
                     <div class="dropdown-content dropdown">
@@ -70,16 +70,21 @@
         </div>
     </section>
     <section id="welcome-screen">
-        <div class="advertise"> <h1>Notices</h1><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis et voluptas rerum, dolore distinctio nisi quos vero reiciendis fuga eum incidunt itaque, atque voluptate neque facilis deserunt sed maiores laboriosam a beatae totam ducimus
-            mollitia molestiae? Rem totam nostrum hic ab reiciendis cumque sint nobis, adipisci incidunt facilis saepe ipsa laborum explicabo debitis dolorum? Sequi, numquam ea officia blanditiis animi voluptas totam voluptates reiciendis dolor, deserunt
-            ducimus, omnis repellendus recusandae unde autem beatae iste vel nostrum ab quasi mollitia saepe. Fugit aspernatur illo exercitationem minima libero. Amet obcaecati, voluptate eum non fuga doloremque ad eaque natus rerum, ratione ab!</div>
-        <div class="welcome"> <h1>Welcome to our school</h1> <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nobis consequatur, labore provident non laudantium consequuntur molestias reiciendis doloribus at accusantium, aperiam veniam voluptatibus necessitatibus temporibus quos illum eius
-            ad! Qui, voluptates. Sapiente, natus sit quod fugit harum, doloremque suscipit error ullam repellendus ipsa soluta tempora modi totam, voluptatum similique exercitationem? Illum cupiditate quisquam aliquam, quo sint modi aperiam nobis optio
-            minus repellat soluta saepe. Hic asperiores exercitationem id? Fugiat eligendi qui ipsa pariatur, cupiditate quae, suscipit fuga porro voluptate dignissimos rerum perspiciatis, ullam animi tempore! Unde, vel. Quod amet placeat similique vel
-            iure eum fugiat deleniti laborum. Quos, at? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus nihil autem soluta sunt distinctio reiciendis dolore error sapiente saepe quia, reprehenderit tempore harum maxime quas ea facere
-            facilis dolor corrupti neque quisquam illum perspiciatis. Cupiditate assumenda nemo saepe dolorem dolore nesciunt eius nobis dolores! Porro, doloribus eum? Eligendi tempora, libero numquam itaque voluptatem esse soluta asperiores. Repellat
-            ab ad, officiis eaque dolore veniam assumenda sed minus commodi natus numquam at unde aperiam molestiae fugiat a totam distinctio fugit perspiciatis autem accusantium optio eveniet sint? Accusamus, minus? Est, adipisci ipsum facere a optio
-            molestiae sapiente modi soluta quo fugit cupiditate sit!</div>
+        <div class="advertise">
+            <h1>Notices</h1><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis et voluptas rerum, dolore distinctio nisi quos vero reiciendis fuga eum incidunt itaque, atque voluptate neque facilis deserunt sed maiores laboriosam a
+            beatae totam ducimus mollitia molestiae? Rem totam nostrum hic ab reiciendis cumque sint nobis, adipisci incidunt facilis saepe ipsa laborum explicabo debitis dolorum? Sequi, numquam ea officia blanditiis animi voluptas totam voluptates reiciendis
+            dolor, deserunt ducimus, omnis repellendus recusandae unde autem beatae iste vel nostrum ab quasi mollitia saepe. Fugit aspernatur illo exercitationem minima libero. Amet obcaecati, voluptate eum non fuga doloremque ad eaque natus rerum, ratione
+            ab!
+        </div>
+        <div class="welcome">
+            <h1>Welcome to our school</h1> <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nobis consequatur, labore provident non laudantium consequuntur molestias reiciendis doloribus at accusantium, aperiam veniam voluptatibus necessitatibus
+            temporibus quos illum eius ad! Qui, voluptates. Sapiente, natus sit quod fugit harum, doloremque suscipit error ullam repellendus ipsa soluta tempora modi totam, voluptatum similique exercitationem? Illum cupiditate quisquam aliquam, quo sint
+            modi aperiam nobis optio minus repellat soluta saepe. Hic asperiores exercitationem id? Fugiat eligendi qui ipsa pariatur, cupiditate quae, suscipit fuga porro voluptate dignissimos rerum perspiciatis, ullam animi tempore! Unde, vel. Quod
+            amet placeat similique vel iure eum fugiat deleniti laborum. Quos, at? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus nihil autem soluta sunt distinctio reiciendis dolore error sapiente saepe quia, reprehenderit tempore
+            harum maxime quas ea facere facilis dolor corrupti neque quisquam illum perspiciatis. Cupiditate assumenda nemo saepe dolorem dolore nesciunt eius nobis dolores! Porro, doloribus eum? Eligendi tempora, libero numquam itaque voluptatem esse
+            soluta asperiores. Repellat ab ad, officiis eaque dolore veniam assumenda sed minus commodi natus numquam at unde aperiam molestiae fugiat a totam distinctio fugit perspiciatis autem accusantium optio eveniet sint? Accusamus, minus? Est, adipisci
+            ipsum facere a optio molestiae sapiente modi soluta quo fugit cupiditate sit!
+        </div>
     </section>
     <!-- <section class="socialmedia">
         <ul>
@@ -87,11 +92,44 @@
         </ul>
     </section> -->
     <footer class="background-nav">
-        <div class="left-footer">
-            Copyright &copy; 2021 - www.mywebsite.com - All rights reserved!
+        <div class="socialmedialinkfooter">
+            <div class="contact">
+                <h1>Contact Us</h1>
+                <ul>
+                    <li>
+                        <img src="telephone.png" alt=""> 73645XXXXX
+                    </li>
+                    <li>
+                        <a href="https://wa.me/32874XXXXX"><img src="whatsapp.png" alt=""> 32874XXXXX</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="socialmedia">
+                <ul>
+                    <li>
+                        <a href="https://www.facebook.com"><img src="facebook.png" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com"><img src="instagram.png" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com"><img src="linkedin.png" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="https://www.twitter.com"><img src="twitter.png" alt=""></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="right-footer">
-            Developer : Joyin
+        <div class="reservefooter">
+
+
+            <div class="left-footer">
+                Copyright &copy; 2021 - www.mywebsite.com - All rights reserved!
+            </div>
+            <div class="right-footer">
+                Developer : Joyin
+            </div>
         </div>
     </footer>
     <script src="script.js"></script>
