--- a/index.html
+++ b/index.html
@@ -15,47 +15,52 @@
 </head>
 
 <body>
-    <header>
-        <div class="uppercontact">
-            <div class="phonenumber">
-                <a href="6003351943"><img src="telephone.png" alt="">78256XXXXX</a>
-            </div>
-            <div class="whatsapp">
-                <a href="https://wa.me/916003351943"><img src="whatsapp.png" alt=""> 32874XXXXX</a>
-
-            </div>
+    <!-- <header> -->
+    <div class="uppercontact">
+        <div class="phonenumber">
+            <a href="6003351943"><img src="telephone.png" alt="">78256XXXXX</a>
+        </div>
+        <div class="whatsapp">
+            <a href="https://wa.me/916003351943"><img src="whatsapp.png" alt=""> 32874XXXXX</a>
 
         </div>
-        <div class="schoolname">Universal Knowledge Park, Madhurbond Silchar</div>
-        <div class="navcontainer background-nav h-nav-resp">
-            <div class="logo logoinnav ">
-                <img src="logo.png" alt="Logo">
-            </div>
-            <ul class="navbar v-class-resp">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#admission">Admission</a></li>
-                <li><a href="#forstudents">For students</a></li>
-                <li><a href="#rule">Rules</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
 
-
-                <li class="dropbtn dropdown"><a href="#log-in">Log in</a>
-                    <div class="dropdown-content dropdown">
-                        <a href="#">Student</a>
-                        <a href="#">Teacher</a>
-                        <a href="#">Other people</a>
-                    </div>
-                </li>
-            </ul>
-            <div class="burger">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
+    </div>
+    <div class="schoolname">
+        <div class="logo logoinnav ">
+            <img src="logo.png" alt="Logo">
         </div>
-    </header>
+        <div class="name">Universal Knowledge Park, Madhurbond Silchar</div>
+    </div>
+    <div class="navcontainer background-nav h-nav-resp">
+        <div class="logow logoinnav ">
+            <img src="logo.png" alt="Logo">
+        </div>
+        <ul class="navbar v-class-resp">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#admission">Admission</a></li>
+            <li><a href="#forstudents">For students</a></li>
+            <li><a href="rules.html">Rules</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+
+
+            <li class="dropbtn dropdown"><a href="#log-in">Log in</a>
+                <div class="dropdown-content dropdown">
+                    <a href="#">Student</a>
+                    <a href="#">Teacher</a>
+                    <a href="#">Other people</a>
+                </div>
+            </li>
+        </ul>
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+    </div>
+    <!-- </header> -->
     <section id="home" class="background">
         <div class="box-main">
             <div class="margin"></div>
@@ -71,10 +76,10 @@
     </section>
     <section id="welcome-screen">
         <div class="advertise">
-            <h1>Notices</h1><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis et voluptas rerum, dolore distinctio nisi quos vero reiciendis fuga eum incidunt itaque, atque voluptate neque facilis deserunt sed maiores laboriosam a
-            beatae totam ducimus mollitia molestiae? Rem totam nostrum hic ab reiciendis cumque sint nobis, adipisci incidunt facilis saepe ipsa laborum explicabo debitis dolorum? Sequi, numquam ea officia blanditiis animi voluptas totam voluptates reiciendis
-            dolor, deserunt ducimus, omnis repellendus recusandae unde autem beatae iste vel nostrum ab quasi mollitia saepe. Fugit aspernatur illo exercitationem minima libero. Amet obcaecati, voluptate eum non fuga doloremque ad eaque natus rerum, ratione
-            ab!
+            <h1><u>Notices</u></h1><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis et voluptas rerum, dolore distinctio nisi quos vero reiciendis fuga eum incidunt itaque, atque voluptate neque facilis deserunt sed maiores laboriosam
+            a beatae totam ducimus mollitia molestiae? Rem totam nostrum hic ab reiciendis cumque sint nobis, adipisci incidunt facilis saepe ipsa laborum explicabo debitis dolorum? Sequi, numquam ea officia blanditiis animi voluptas totam voluptates
+            reiciendis dolor, deserunt ducimus, omnis repellendus recusandae unde autem beatae iste vel nostrum ab quasi mollitia saepe. Fugit aspernatur illo exercitationem minima libero. Amet obcaecati, voluptate eum non fuga doloremque ad eaque natus
+            rerum, ratione ab!
         </div>
         <div class="welcome">
             <h1>Welcome to our school</h1> <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nobis consequatur, labore provident non laudantium consequuntur molestias reiciendis doloribus at accusantium, aperiam veniam voluptatibus necessitatibus
