--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -14,45 +14,53 @@
 
 </head>
 
-<body>
-    <!-- <header> -->
-    <div class="uppercontact">
-        <div class="phonenumber">
-            <a href="6003351943"><img src="telephone.png" alt="">78256XXXXX</a>
-        </div>
-        <div class="whatsapp">
-            <a href="https://wa.me/916003351943"><img src="whatsapp.png" alt=""> 32874XXXXX</a>
+<body class="parallax">
+    <div class="bg ">
+        <div class="uppercontact ">
+            <div class="phonenumber">
+                <a href="08402080135"><img src="telephone.png" alt="">08402080135</a>
+            </div>
+            <div class="whatsapp">
+                <a href="https://wa.me/917002260047"><img src="whatsapp.png" alt=""> 7002260047</a>
 
+            </div>
+            <div class="email">
+                <a href="
+                ukpschool2017@gmail.com"><img src="gmail.png" alt=""> ukpschool2017@gmail.com</a>
+            </div>
         </div>
-
-    </div>
-    <div class="schoolname">
-        <div class="logo logoinnav ">
-            <img src="logo.png" alt="Logo">
+        <div class="schoolname ">
+            <div class="logo logoinnav ">
+                <img src="logo.jpg" alt="Logo">
+            </div>
+            <div class="name">Universal Knowledge Park School, Madhurbond Silchar</div>
         </div>
-        <div class="name">Universal Knowledge Park, Madhurbond Silchar</div>
     </div>
-    <div class="navcontainer background-nav h-nav-resp">
+    <div class="navcontainer background-nav h-nav-resp bg">
         <div class="logow logoinnav ">
-            <img src="logo.png" alt="Logo">
+            <img src="logo.jpg" alt="Logo">
         </div>
-        <ul class="navbar v-class-resp">
+        <ul class="navbar v-class-resp ">
             <li><a href="#home">Home</a></li>
             <li><a href="#admission">Admission</a></li>
-            <li><a href="#forstudents">For students</a></li>
+
+
+
+
+            <li class="dropbtn dropdown"><a href="#forstudents">For students</a>
+                <div class="dropdown-content dropdown">
+                    <a href="#">Social</a>
+                    <a href="#">Sports</a>
+                    <a href="#">Academics</a>
+                    <a href="#">Notices</a>
+
+                </div>
+            </li>
+
             <li><a href="rules.html">Rules</a></li>
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
-
-
-            <li class="dropbtn dropdown"><a href="#log-in">Log in</a>
-                <div class="dropdown-content dropdown">
-                    <a href="#">Student</a>
-                    <a href="#">Teacher</a>
-                    <a href="#">Other people</a>
-                </div>
-            </li>
         </ul>
         <div class="burger">
             <div class="line"></div>
@@ -60,68 +68,150 @@
             <div class="line"></div>
         </div>
     </div>
-    <!-- </header> -->
+
     <section id="home" class="background">
         <div class="box-main">
             <div class="margin"></div>
-            <div class="parallax">
-                <div class="parallax-inner">
-                    <div class="slides">
+            <!-- <div class="parallax "> -->
+            <div class="parallax-inner">
+                <div class="slides">
+                    <h1>NURTURING MINDS, NURTURING TALENTS</h1>
 
-                    </div>
-                    <p>Universal Knowledge Park , Madhurbond , Silchar</p>
+
                 </div>
+                <p>Universal Knowledge Park , Madhurbond , Silchar</p>
             </div>
+            <!-- </div> -->
         </div>
     </section>
-    <section id="welcome-screen">
+    <section id="welcome-screen" class="bg1">
         <div class="advertise">
-            <h1><u>Notices</u></h1><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis et voluptas rerum, dolore distinctio nisi quos vero reiciendis fuga eum incidunt itaque, atque voluptate neque facilis deserunt sed maiores laboriosam
-            a beatae totam ducimus mollitia molestiae? Rem totam nostrum hic ab reiciendis cumque sint nobis, adipisci incidunt facilis saepe ipsa laborum explicabo debitis dolorum? Sequi, numquam ea officia blanditiis animi voluptas totam voluptates
-            reiciendis dolor, deserunt ducimus, omnis repellendus recusandae unde autem beatae iste vel nostrum ab quasi mollitia saepe. Fugit aspernatur illo exercitationem minima libero. Amet obcaecati, voluptate eum non fuga doloremque ad eaque natus
-            rerum, ratione ab!
+            <h1>Notices</h1><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis et voluptas rerum, dolore distinctio nisi quos vero reiciendis fuga eum incidunt itaque, atque voluptate neque facilis deserunt sed maiores laboriosam a
+            beatae totam ducimus mollitia molestiae? Rem totam nostrum hic ab reiciendis cumque sint nobis, adipisci incidunt facilis saepe ipsa laborum explicabo debitis dolorum? Sequi, numquam ea officia blanditiis animi voluptas totam voluptates reiciendis
+            dolor, deserunt ducimus, omnis repellendus recusandae unde autem beatae iste vel nostrum ab quasi mollitia saepe. Fugit aspernatur illo exercitationem minima libero. Amet obcaecati, voluptate eum non fuga doloremque ad eaque natus rerum, ratione
+            ab!
         </div>
         <div class="welcome">
-            <h1>Welcome to our school</h1> <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nobis consequatur, labore provident non laudantium consequuntur molestias reiciendis doloribus at accusantium, aperiam veniam voluptatibus necessitatibus
-            temporibus quos illum eius ad! Qui, voluptates. Sapiente, natus sit quod fugit harum, doloremque suscipit error ullam repellendus ipsa soluta tempora modi totam, voluptatum similique exercitationem? Illum cupiditate quisquam aliquam, quo sint
-            modi aperiam nobis optio minus repellat soluta saepe. Hic asperiores exercitationem id? Fugiat eligendi qui ipsa pariatur, cupiditate quae, suscipit fuga porro voluptate dignissimos rerum perspiciatis, ullam animi tempore! Unde, vel. Quod
-            amet placeat similique vel iure eum fugiat deleniti laborum. Quos, at? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus nihil autem soluta sunt distinctio reiciendis dolore error sapiente saepe quia, reprehenderit tempore
-            harum maxime quas ea facere facilis dolor corrupti neque quisquam illum perspiciatis. Cupiditate assumenda nemo saepe dolorem dolore nesciunt eius nobis dolores! Porro, doloribus eum? Eligendi tempora, libero numquam itaque voluptatem esse
-            soluta asperiores. Repellat ab ad, officiis eaque dolore veniam assumenda sed minus commodi natus numquam at unde aperiam molestiae fugiat a totam distinctio fugit perspiciatis autem accusantium optio eveniet sint? Accusamus, minus? Est, adipisci
-            ipsum facere a optio molestiae sapiente modi soluta quo fugit cupiditate sit!
+            <div class="text-address">
+                <h1>Welcome</h1> <br>
+                <h2><u> MISSION AND GOAL</u></h2>
+                <br>
+                <h2> VISION</h2> <br> At Universal Knowledge Park School , Silchar , we try our best to instill the educational and co-educational experience that is high class in every respect and which prepares children for ideal citizenship. We believe
+                that every child is unique . Every child is allowed to grow as an individual and thereby explore his / her full potential. Through our innovative techniques we strive to expose our students to stimulating and enriching learning experience
+                <br> The School’s vision is to provide a better learning environment to encourage the children to bring out the best in themselves and be confident along with their all round development through discovering the joy and the art of learning
+                and instilling abiding values in themselves.
+
+
+
+
+
+                <br><br>
+                <h2> Our Motto Nurturing Minds, Nurturing Talents </h2><br><br>
+                <h2> OUR VALUES AND ATTRIBUTES</h2> <br> Our values and attributes which align with our guiding statements are integral to creating school culture and climate to realize our educational goals —
+                <br>
+                <ul>
+                    <li>Cleanliness</li>
+                    <li>Compassion</li>
+                    <li>Commitment</li>
+                    <li>Determination</li>
+                    <li>Honesty</li>
+                    <li>Integrity</li>
+                    <li>Perseverance</li>
+                    <li>Respect</li>
+                    <li>Responsibility</li>
+                    <li>Self-Discipline</li>
+                    <li>Teamwork</li>
+                    <li>Trust</li>
+                </ul>
+                <hr>
+                <br>
+                <h2> MISSION</h2>
+                <br> Our mission is to foster each child's well-being as a foundation for academic and life success by drawing on the strengths of the child's
+                <span id="dots"> ...</span><span id="more">entire community. To provide and teach the use of modern
+                    tools, materials and technology and by
+                    applying play-way method .
+                    <br> To equally treat all the students coming from different backgrounds and cultures.
+                    <br> Work collaboratively with fellow staffs , students, parents and the community.
+                    <br> To make them proactive thinker and molding a generation competent and creative individuals
+                    capable of proving constructive leadership in a new world order.
+
+
+                    <hr>
+                    <br>
+                    <h2> GOALS</h2>
+                    <br> To provide a safe, secure and joyful environment in which each child can dare to dream, enjoy
+                    learning, achieve excellence and become a life long learner.<br> To provide opportunities for
+                    children to step beyond the confines of classroom
+                    learning and the immediate context to explore new places and adventures.
+                    <br> To inculcate in children , the value of compassion, empathy and respect towards other and the
+                    environment
+                    <br> To encourage children to develope the qualities of self discipline , positive self image , team
+                    work , spirit of adventure and leadership .<br> To inspire young minds to think creatively and
+                    laterally, solve problems and develop a
+                    lifelong enthusiasm for learning,
+                    <br> To make children aware and appreciative of their history, cultures and traditions , whilst
+                    being open to other culture and alternative views of the world . <br> Here’s what sets us apart UKPS
+                    was conceived as an educational institution
+                    with a belief that every child is unique and special . They are the future of our nation and its our
+                    responsibility to nurture their minds and talents not only for the betterment of our nation but also
+                    for better humanitarian. <br> We
+                    believe that a teacher should play the role of a guide , a friend and not just a disseminator of
+                    textbook knowledge. Our teachers are highly experienced with a minimum qualification of Bachelor’s
+                    Degree and D. El. Ed . Through our interactive
+                    and engaging classrooms we ensure that children are active participants rather than passive
+                    listeners.
+                    <br> Personal, academic, social and emotional development is given importance over basic cognitive
+                    development, ensuring that reasoning is not neglected. This interdisciplinary approach enables their
+                    all round development through the joy
+                    of learning , enduring values and the celebration of diversity .
+                    <br><br>
+                </p>
+                </span>
+
+
+                <button onclick="myFunction()" id="myBtn">Read More...</button>
+
+            </div>
+
+
+
+
+            <!-- <h2> SF-UKP</h2> -->
+
         </div>
     </section>
-    <!-- <section class="socialmedia">
-        <ul>
-            <li><a href=""></a></li>
-        </ul>
-    </section> -->
-    <footer class="background-nav">
+    <div class="youtube">
+        <a href="https://www.youtube.com/channel/UCIpDbtpjnV4IBYO0rL6SLfw"><img src="youtube.png" alt="You Tube"></a>
+    </div>
+    <footer class="background-nav bg2">
         <div class="socialmedialinkfooter">
             <div class="contact">
                 <h1>Contact Us</h1>
                 <ul>
                     <li>
-                        <img src="telephone.png" alt=""> 73645XXXXX
+                        <a href="08402080135"><img src="telephone.png" alt="">08402080135</a>
                     </li>
                     <li>
-                        <a href="https://wa.me/32874XXXXX"><img src="whatsapp.png" alt=""> 32874XXXXX</a>
+                        <a href="https://wa.me/917002260047"><img src="whatsapp.png" alt=""> 7002260047</a>
                     </li>
                 </ul>
             </div>
             <div class="socialmedia">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com"><img src="facebook.png" alt=""></a>
+                        <a href="https://www.facebook.com/ukp18"><img src="facebook.png" alt=""></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com"><img src="instagram.png" alt=""></a>
+                        <a href="https://www.instagram.com/ukpschool/?hl=en"><img src="instagram.png" alt=""></a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://www.linkedin.com"><img src="linkedin.png" alt=""></a>
+                    </li> -->
+                    <li>
+                        <a href="https://twitter.com/s_arya_maz"><img src="twitter.png" alt=""></a>
                     </li>
                     <li>
-                        <a href="https://www.twitter.com"><img src="twitter.png" alt=""></a>
+                        <a href="https://www.youtube.com/channel/UCIpDbtpjnV4IBYO0rL6SLfw"><img src="youtube.png" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -141,15 +231,3 @@
 </body>
 
 </html>
-
-
-
-<!-- home -->
-<!-- <div class="first-half">
-                <p>Hello ,</p>
-                <h1>This is Me </h1>
-                <br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel error sint quos, nihil quas voluptatum ipsa dolorum eveniet id eligendi.
-            </div>
-            <div class="second-half">
-                <img src="photos/man.png" alt="MyPhoto">
-            </div> -->
